# CE_AdaSAC_System

./: .gitignore  =2.6  =2.6.0  ASTO_LOGGING_README.md  CMakeLists.txt  CMakePresets.json  Finalytest.ipynb  GPTJ_ISP_VAL.pkl  GPTJ_ISP_VAL_generated.pkl  GPTJ_generate_SVD_layer.py  GPTJ_new_SVD_test.py  GPTJ_source.py  ISP_GPTJ.py  ISP_RES50_EVAL.npz  ISP_RES50_EVAL_RANDOM.npz  MINI_PIPE_TEST.py  Profile_INFO.txt  README.md  alex.py  alpha_f_score_comparison.eps  alpha_test.npz  alpha_test.py  analyze_asto_logs.py  asto_alex.txt  asto_complete_log.pkl  asto_draw2025731.py  asto_res50.txt  asto_summary_report.txt  asto_v2_alpha_0.0_log.pkl  asto_v2_alpha_0.1_log.pkl  asto_v2_alpha_0.2_log.pkl  asto_v2_alpha_0.3_log.pkl  asto_v2_alpha_0.4_log.pkl  asto_v2_alpha_0.5_log.pkl  asto_v2_alpha_0.6_log.pkl  asto_v2_alpha_0.7_log.pkl  asto_v2_alpha_0.8_log.pkl  asto_v2_alpha_0.9_log.pkl  asto_v2_alpha_1.0_log.pkl  astogptJ.py  (+81 more)
Attribute/: CMakeLists.txt  main.cpp
Attribute/src/: Attribute.cpp
Attribute/test/: Attributetest.cpp
Graph/: CMakeLists.txt  main.cpp
Graph/src/: Graph.cpp  Operand.cpp  Operator.cpp  ir.cpp
Graph/test/: TestRun.cpp  testAttribute.cpp  testGraph.cpp
Layer/: CMakeLists.txt  LayerRegister.cpp  main.cpp
Layer/abstract/: Layer.cpp
Layer/src/: Layer.cpp  LayerRegister.cpp  Linear.cpp  Relu.cpp  sigmoid.cpp
Layer/test/: testLayers.cpp
Operand/: CMakeLists.txt  main.cpp
Operand/src/: Operand.cpp
Operand/test/: testOperand.cpp
Operators/: CMakeLists.txt  main.cpp
Operators/src/: Layer.cpp  Operator.cpp
Operators/test/: testOperator.cpp
course3/: CMakeLists.txt
course3/log/: Kuiper.40a179d6d315.root.log.ERROR.20240923-152110.23573  Kuiper.40a179d6d315.root.log.INFO.20240923-145903.9260  Kuiper.40a179d6d315.root.log.INFO.20240923-150344.12224  Kuiper.40a179d6d315.root.log.INFO.20240923-150419.12725  Kuiper.40a179d6d315.root.log.INFO.20240923-150533.13624  Kuiper.40a179d6d315.root.log.INFO.20240923-151833.22031  Kuiper.40a179d6d315.root.log.INFO.20240923-152110.23573  Kuiper.40a179d6d315.root.log.INFO.20240923-152202.24223  Kuiper.40a179d6d315.root.log.WARNING.20240923-145903.9260  Kuiper.40a179d6d315.root.log.WARNING.20240923-150344.12224  Kuiper.40a179d6d315.root.log.WARNING.20240923-150419.12725  Kuiper.40a179d6d315.root.log.WARNING.20240923-151833.22031  Kuiper.WARNING
course3/test/: test_ir.cpp
src/llama.cpp/: .gitignore  CMakeLists.txt  README.md  download_models.py  run_bash_list.txt
src/llama.cpp/3dparty/llamacpp/: tini_out.txt
src/llama.cpp/app_for_ops/: package-lock.json  package.json
src/llama.cpp/build-android/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
src/llama.cpp/build-android/ops/: Makefile  cmake_install.cmake
src/llama.cpp/datas/acc_evaluate/: README.md  svd_minibatch_vs_real.py
src/llama.cpp/datas/llama_svd_conv/: DATA_PROVENANCE.md  FOLD_UNFOLD_SVD_COMPARISON.md  IM2COL_EXPERIMENT.md  fold_unfold_svd_results.json  generate_perf_charts.py  im2col_experiment_results.json  operator_fair_conv_results.json
src/llama.cpp/datas/llama_svd_transformer/: EXPERIMENT_REPORT.md  bench_svd_mul_mat.cpp  plot_svd_mul_mat_results.py
src/llama.cpp/datas/svd_effect/: SPLIT_DROP_TAIL_BRANCH_REPORT.md  (+2 more)
src/llama.cpp/demo/: main.cpp  main.py
src/llama.cpp/exp10_svd_local_truncation_fix/: exp10_local_ab_split_design_2026-04-19.md  exp10_local_ab_split_experiment_2026-04-19.md  exp10_q4_svd_local_truncation_fix_2026-04-19.md  exp10_timeout_experiment_2026-04-20.md  exp10_timeout_offload_debug_2026-04-20.md  perplexity_svd.cpp  ppl_corpus_qwen_out_64k.txt
src/llama.cpp/exp11_make_input_data/: DESIGN.md  EXPERIMENT.md  USAGE.md  make_synthetic_minibatch.py
src/llama.cpp/exp12_algorithms/: ADDITIVE_PROFILE_AND_SCHEDULER_REPORT.md  CORRECTED_TIMEOUT_AND_SPLIT_REPORT.md  EFFECTIVENESS_EXPERIMENTS.md  EXPERIMENT_REPORT.md  README.md  RESULTS_DATA_GUIDE.md  TIMEOUT_POLICY_REPORT.md  benchmark_effectiveness.py  benchmark_heterogeneous_schedule_cgroup.py  benchmark_model_schedule_cgroup.py  benchmark_runtime_optimized_scheduler.py  benchmark_timeout_policy.py  build_additive_profile.py  build_model_profile.py  fit_latency_model.py  fit_runtime_policy_model.py  generate_lhs_profile_dataset.py  run_exp12_local.py  scheduler.py  validate_core_additivity.py  validate_heterogeneous_additivity.py
src/llama.cpp/exp1_convert_torch_gguf/: convert_torch_to_gguf.py
src/llama.cpp/exp2_read_gguf_svd_write/: generate_svd.py  test.py
src/llama.cpp/exp3_load_svd_to_llamacpp/: load_llamacpp.cpp
src/llama.cpp/exp5_run_svd_model/: run_svd_model.cpp
src/llama.cpp/exp6_decode_svd_model/: adb_stdio_bridge.py  decode_svd_model.cpp  exp6_cooperative_offload_followup_2026-04-07.md  exp6_core_sweep_2026-04-11.md  exp6_mobile_quantized_coop_summary_2026-04-11.md  exp6_mobile_quantized_svd_model_report_2026-04-11.md  exp6_profile_compare_2026-04-04.md  layer_coop_client.cpp  layer_coop_net.h  layer_mobile_server.cpp  layer_tail_local_bench.cpp  layer_threadpool.h  mul_mat_svd_optimization_report.md  run_android_phone_coop_sweep.sh  run_coop_core_sweep.sh  svd_cooperative_offload_experiment_report.md  svd_cooperative_offload_optimization_report.md  svd_interface_callchain.md  svd_mobile_server.cpp
src/llama.cpp/exp7_generate_sort_svd/: generate_sort_svd.py  quantize_mobile_svd.py  strip_dense_ffn_from_svd.py  truncate_svd_gguf.py
src/llama.cpp/exp8_resnet50/: EXPERIMENT_REPORT_fold_unfold.md  README.md  bench_conv_ops.cpp  benchmark_fold_unfold.py  benchmark_pytorch_resnet50_forward.py  convert_resnet50_to_gguf.py  run_resnet50.cpp  run_resnet50_conv_svd.cpp
src/llama.cpp/exp9_android_phone_coop/: README.md  exp6_mobile_quantized_coop_summary_2026-04-11.md  exp6_quantized_mobile_offload_report_2026-04-11.md  exp9_debug_coop_0p9tok_2026-04-18.md  exp9_windows_q4_svd_fastpath_2026-04-18.md
src/llama.cpp/ops/: CMakeLists.txt  CMakeLists.txt.backup  ops.h  ops_jni.cpp  ops_py.cpp
src/llama.cpp/utils/: get_layer_ops.py  get_sub_graph.py  print_gguf.py  print_model.py  print_pytorch_model.py  qwen2.dot  sub_l6.dot
(+614 files in other folders)
