cmake_minimum_required(VERSION 3.10)

project(OPS_TEST)

if(CMAKE_BUILD_TYPE STREQUAL "Release")
    foreach(flag_var CMAKE_C_FLAGS_RELEASE CMAKE_CXX_FLAGS_RELEASE)
        if(NOT "${${flag_var}}" MATCHES "([/-]O[0-3sSzZx]|-Ofast)")
            set(${flag_var} "${${flag_var}} -O3 -DNDEBUG" CACHE STRING "Release optimization flags" FORCE)
        endif()
    endforeach()
endif()

# 检测是否为安卓平台
if(ANDROID)
    message("Android Version Compiling")
    set(IS_ANDROID ON)
    # 强制 llamacpp 编译为静态库
    set(BUILD_SHARED_LIBS OFF CACHE BOOL "Build shared libraries" FORCE)
    set(LLAMA_BUILD_SHARED OFF CACHE BOOL "Build shared llama library" FORCE)
    set(GGML_BUILD_SHARED OFF CACHE BOOL "Build shared ggml library" FORCE)
else()
    set(IS_ANDROID OFF)
endif()

add_subdirectory(${CMAKE_SOURCE_DIR}/3dparty/llamacpp)
if(WIN32 AND TARGET ggml-base)
    target_link_libraries(ggml-base INTERFACE ws2_32)
endif()
include_directories(${CMAKE_SOURCE_DIR}/3dparty/llamacpp/src)
include_directories(${CMAKE_SOURCE_DIR}/3dparty/llamacpp/common)
include_directories(${CMAKE_SOURCE_DIR}/3dparty/llamacpp/include)
include_directories(${CMAKE_SOURCE_DIR}/3dparty/llamacpp/ggml)
include_directories(${CMAKE_SOURCE_DIR}/3dparty/llamacpp/ggml/include)

if(NOT IS_ANDROID AND EXISTS ${CMAKE_SOURCE_DIR}/3dparty/oneDNN/CMakeLists.txt)
    set(DNNL_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
    set(DNNL_BUILD_TESTS OFF CACHE BOOL "" FORCE)
    set(DNNL_BUILD_DOC OFF CACHE BOOL "" FORCE)
    set(ONEDNN_BUILD_GRAPH OFF CACHE BOOL "" FORCE)
    set(DNNL_ENABLE_WORKLOAD INFERENCE CACHE STRING "" FORCE)
    set(DNNL_ENABLE_PRIMITIVE "CONVOLUTION;REORDER;ELTWISE;POOLING;SUM" CACHE STRING "" FORCE)
    add_subdirectory(${CMAKE_SOURCE_DIR}/3dparty/oneDNN EXCLUDE_FROM_ALL)
endif()

set(BUILD_PYTHON_OPS_BINDING OFF)
if(NOT IS_ANDROID AND NOT WIN32)
    set(BUILD_PYTHON_OPS_BINDING ON)
endif()

# 桌面版需要 Python
if(BUILD_PYTHON_OPS_BINDING)
    add_subdirectory(${CMAKE_SOURCE_DIR}/3dparty/pybind11)
    find_package(Python3 REQUIRED COMPONENTS Interpreter Development Development.Module)
endif()

include_directories(${CMAKE_SOURCE_DIR}/ops)
if(IS_ANDROID OR BUILD_PYTHON_OPS_BINDING)
    add_subdirectory(ops)
endif()

if(IS_ANDROID)
    add_executable(decode_svd_test exp6_decode_svd_model/decode_svd_model.cpp)
    add_executable(svd_mobile_server exp6_decode_svd_model/svd_mobile_server.cpp)
    add_executable(layer_coop_client exp6_decode_svd_model/layer_coop_client.cpp)
    add_executable(layer_mobile_server exp6_decode_svd_model/layer_mobile_server.cpp)
    add_executable(layer_tail_local_bench exp6_decode_svd_model/layer_tail_local_bench.cpp)
    target_link_libraries(decode_svd_test PRIVATE llama)
    target_link_libraries(svd_mobile_server PRIVATE llama)
    target_link_libraries(layer_coop_client PRIVATE llama)
    target_link_libraries(layer_mobile_server PRIVATE llama)
    target_link_libraries(layer_tail_local_bench PRIVATE llama)
endif()

# 桌面版才编译 ops_test
if(NOT IS_ANDROID)
    add_executable(load_test exp3_load_svd_to_llamacpp/load_llamacpp.cpp)
    add_executable(run_svd_test exp5_run_svd_model/run_svd_model.cpp)
    add_executable(decode_svd_test exp6_decode_svd_model/decode_svd_model.cpp)
    add_executable(svd_mobile_server exp6_decode_svd_model/svd_mobile_server.cpp)
    add_executable(layer_coop_client exp6_decode_svd_model/layer_coop_client.cpp)
    add_executable(layer_mobile_server exp6_decode_svd_model/layer_mobile_server.cpp)
    add_executable(layer_tail_local_bench exp6_decode_svd_model/layer_tail_local_bench.cpp)
    add_executable(perplexity_svd_test
        exp10_svd_local_truncation_fix/perplexity_svd.cpp
        ${CMAKE_SOURCE_DIR}/3dparty/llamacpp/common/arg.cpp
        ${CMAKE_SOURCE_DIR}/3dparty/llamacpp/common/build-info.cpp
        ${CMAKE_SOURCE_DIR}/3dparty/llamacpp/common/chat.cpp
        ${CMAKE_SOURCE_DIR}/3dparty/llamacpp/common/common.cpp
        ${CMAKE_SOURCE_DIR}/3dparty/llamacpp/common/console.cpp
        ${CMAKE_SOURCE_DIR}/3dparty/llamacpp/common/json-schema-to-grammar.cpp
        ${CMAKE_SOURCE_DIR}/3dparty/llamacpp/common/log.cpp
        ${CMAKE_SOURCE_DIR}/3dparty/llamacpp/common/ngram-cache.cpp
        ${CMAKE_SOURCE_DIR}/3dparty/llamacpp/common/sampling.cpp
        ${CMAKE_SOURCE_DIR}/3dparty/llamacpp/common/speculative.cpp
    )
    add_executable(run_resnet50 exp8_resnet50/run_resnet50.cpp)
    add_executable(run_resnet50_ggml exp8_resnet50/run_resnet50.cpp)
    add_executable(run_resnet50_conv_svd exp8_resnet50/run_resnet50_conv_svd.cpp)
    add_executable(bench_conv_ops exp8_resnet50/bench_conv_ops.cpp)
    add_executable(bench_svd_mul_mat_transformer datas/llama_svd_transformer/bench_svd_mul_mat.cpp)
    # target_link_libraries(ops_test PRIVATE Python3::Python llama opslib)
    target_link_libraries(load_test PRIVATE llama)
    target_link_libraries(run_svd_test PRIVATE llama)
    target_link_libraries(decode_svd_test PRIVATE llama)
    target_link_libraries(svd_mobile_server PRIVATE llama)
    target_link_libraries(layer_coop_client PRIVATE llama)
    target_link_libraries(layer_mobile_server PRIVATE llama)
    target_link_libraries(layer_tail_local_bench PRIVATE llama)
    target_link_libraries(perplexity_svd_test PRIVATE llama ${CMAKE_THREAD_LIBS_INIT})
    target_link_libraries(run_resnet50 PRIVATE llama ggml ggml-base ggml-cpu)
    target_link_libraries(run_resnet50_ggml PRIVATE llama ggml ggml-base ggml-cpu)
    target_link_libraries(run_resnet50_conv_svd PRIVATE llama ggml ggml-base ggml-cpu)
    target_link_libraries(bench_conv_ops PRIVATE ggml ggml-base ggml-cpu)
    target_link_libraries(bench_svd_mul_mat_transformer PRIVATE ggml ggml-base ggml-cpu)
    if(TARGET dnnl)
        target_compile_definitions(run_resnet50 PRIVATE RESNET50_USE_ONEDNN)
        target_link_libraries(run_resnet50 PRIVATE dnnl)
        find_package(OpenMP)
        if(OpenMP_FOUND)
            target_link_libraries(run_resnet50 PRIVATE OpenMP::OpenMP_CXX)
            target_link_libraries(run_resnet50_conv_svd PRIVATE OpenMP::OpenMP_CXX)
            target_link_libraries(bench_conv_ops PRIVATE OpenMP::OpenMP_CXX)
        endif()
        target_compile_definitions(run_resnet50_conv_svd PRIVATE RESNET50_USE_ONEDNN)
        target_link_libraries(run_resnet50_conv_svd PRIVATE dnnl)
        target_compile_definitions(bench_conv_ops PRIVATE RESNET50_USE_ONEDNN)
        target_link_libraries(bench_conv_ops PRIVATE dnnl)
    endif()
    if(WIN32)
        target_link_libraries(decode_svd_test PRIVATE ws2_32)
        target_link_libraries(svd_mobile_server PRIVATE ws2_32)
        target_link_libraries(layer_coop_client PRIVATE ws2_32)
        target_link_libraries(layer_mobile_server PRIVATE ws2_32)
    endif()
    if (GGML_OPENMP)
        find_package(OpenMP)
        if (OpenMP_FOUND)
            target_compile_definitions(svd_mobile_server PRIVATE GGML_USE_OPENMP)
            target_link_libraries(svd_mobile_server PRIVATE OpenMP::OpenMP_CXX)
        endif()
    endif()
    if(TARGET opslib)
        add_executable(simple ${CMAKE_SOURCE_DIR}/3dparty/llamacpp/examples/simple/simple.cpp)
        add_executable(llama-bench
            ${CMAKE_SOURCE_DIR}/3dparty/llamacpp/examples/llama-bench/llama-bench.cpp
            ${CMAKE_SOURCE_DIR}/3dparty/llamacpp/common/common.cpp
            ${CMAKE_SOURCE_DIR}/3dparty/llamacpp/common/log.cpp
            ${CMAKE_SOURCE_DIR}/3dparty/llamacpp/common/build-info.cpp  # 定义 LLAMA_* 符号
        )
        target_link_libraries(simple PRIVATE opslib llama)
        target_link_libraries(llama-bench PRIVATE opslib llama ggml)
    endif()
endif()
